--- a/index.html
+++ b/index.html
@@ -10,10 +10,24 @@
 <body>
     <div  class="contenedor">
 
-        <div  class="encabezado"></div>
+        <div  class="encabezado">Tecnologia e informatica</div>
         <div  class="menu"></div>
         <div  class="contenedor2">
-            <div  class="izquierdo"></div>
+            <div  class="izquierdo">Luciana Guerra <div class="alert alert-success" role="alert">
+              <h4 class="alert-heading">Tiffany Marin Villan
+                  Maria Paulina Castrillon Perez
+              </h4>
+              <p></p>
+              <p class="mb-0"></p>
+            </div> <div class="alert alert-success" role="alert">
+              <h4 class="alert-heading"></h4>
+              <p></p>
+              <p class="mb-0"></p>
+            </div> <div class="alert alert-success" role="alert">
+              <h4 class="alert-heading"></h4>
+              <p></p>
+              <p class="mb-0"></p>
+            </div></div>
             <div  class="centro"></div>
             <div  class="derecho"></div>
         </div>
